tests/NormalTests/paczka2/big_fuzzy/59639077.err
Error in line 1: 45sLtpEAZz S496 10,7
Error in line 16: ThST S496 74,4
Error in line 24: Rzv5f S496 76,4
Error in line 42: WNQL6ULXIfs A514 27,7
Error in line 33: A219 A455 42,9
Error in line 52: ThST A455 67,8
Error in line 61: 45sLtpEAZz A219 56,0
Error in line 66: Lxi2VV3 A514 44,6
Error in line 72: WNQL6ULXIfs A455 92,9
Error in line 65: Rzv5f A219 124,9
Error in line 89: Lxi2VV3 A455 92,7
Error in line 96: ThST S496 77,1
Error in line 100: ThST A219 5,5
Error in line 121: ThST A514 55,4
Error in line 106: Rzv5f A514 278,9
Error in line 139: A219 A514 38,7
Error in line 151: LxiFVV3 AF19 11,7
Error in line 140: ThST S496 31,9
Error in line 176: Lxi2VV3 A219 36,6
Error in line 161: WNQL6ULXIfs S496 118,1
Error in line 184: Rzv5f S496 61,79
Error in line 185: 2WvEx S496 41,1
Error in line 186: Rzv5f S496 237,1
Error in line 193: ThST A219 58,5
Error in line 196: ThST A455 30,8
Error in line 201: 45sLtpEAZz A514 49,8
Error in line 197: ThST A514 19,7
Error in line 211: Lxi2VV3 A455 71,9
Error in line 216: A219 S496 67,2
Error in line 229: Lxi2VV3 A455 23,67
Error in line 228: A219 A514 99,9
Error in line 238: 45sLtpEAZz A514 63,0
Error in line 221: Lxi2VV3 A455 6,4
Error in line 247: 2WvEx½A514½70,7
